<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_background"
    tools:context=".ui.main.LoginFragment">


    <ImageView
        android:id="@+id/general_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/tv_logo"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom"
        android:clipChildren="true"
        app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_name_title"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/colorOrange1"
            android:textSize="36sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/et_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_name"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="User name :"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:layout_above="@id/et_email_title"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/et_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_email"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="Email address :"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/user_email"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/et_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="Password :"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/et_repassword_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="Re-type password :"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_type_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/et_repassword_title"
            android:padding="15dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />
        <!--
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:onClick="go_to_login"
            android:src="@drawable/ic_arrow_left" />
            -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_repassword"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_custom1"
            android:text="@string/register" />

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_register"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:onClick="go_to_login"
            android:text="@string/Cancel"
            android:textColor="@color/colorOrange1"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>
